--- a/models/_sources/out.c-dbt_transformation.yml
+++ b/models/_sources/out.c-dbt_transformation.yml
@@ -5,7 +5,7 @@ sources:
         warn_after:
             count: 1
             period: day
-      database: '{{ env_var("DBT_KBC_MUJ_PROJEKT_DATABASE") }}'
+      database: KEBOOLA_21520
       schema: out.c-dbt_transformation
       loaded_at_field: '"_timestamp"'
       tables:
